--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Generate Datas
 on:
-  schedule: # execute every 12 hours
+  schedule: # execute every 5 minutes
     - cron: "* */12 * * *"
   workflow_dispatch:
 jobs:
